Project_Files/web-dep/client/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greencure-deployment
  labels:
    app: greencure
spec:
  replicas: 2
  selector:
    matchLabels:
      app: greencure
  template:
    metadata:
      labels:
        app: greencure
    spec:
      containers:
      - name: greencure-container
        image: aadarshg619/greencure1
        ports:
        - containerPort: 3000 # React apps usually run on port 3000
---

apiVersion: v1
kind: Service
metadata:
  name: greencure-service
spec:
  type: NodePort
  selector:
    app: greencure
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 32000 # Optional: You can choose any port between 30000–32767
