Project_Files/web-dep/client/alb-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greencure-ingress
  namespace: leaf
  annotations:
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/success-codes: "200,404"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /api/predict
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 8000
      - path: /api/health
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: greencure-svc
            port:
              number: 80
